# citecrawl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GEMINI.md  PRD.md  README.md  bibliography.bib  generate_bibtex.py  generate_qr.py  pyproject.toml  requirements.txt  run_pipeline.ps1  scraper.py  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
citecrawl/: __main__.py  bibtex.py  cli.py  enrichment.py  extraction.py  gdocs.py  models.py
doc_handler/: .env.example  ARCHITECTURE.md  CLAUDE.md  PRD.md  Propuesta índice Guía IA para Bibliotecas Públicas y Comunitarias.md  README.md  TDD_PLAN_CACHE.md  TDD_PLAN_US001.md  TDD_PLAN_US002.md  TDD_PLAN_US003.md  USER_STORIES.md  guia.md  pyproject.toml  test_document.md
doc_handler/.claude/: settings.local.json
doc_handler/doc_handler/: __init__.py  __main__.py
doc_handler/doc_handler/cli/: __init__.py  commands.py
doc_handler/doc_handler/domain/: exceptions.py  models.py  parser.py
doc_handler/doc_handler/infrastructure/: cache.py  embedding_analyzer.py  embeddings.py  file_handler.py
doc_handler/scripts/: qa_secciones.py
doc_handler/tests/cli/: test_commands.py
doc_handler/tests/domain/: test_models.py  test_parser.py
doc_handler/tests/infrastructure/: test_cache.py  test_embedding_analyzer.py  test_embeddings.py  test_file_handler.py
old/: cli.py  gdocs.py
pages/: 01_Extract.py  02_Export.py
prompts/: guia_estilo-capitulo_2_genero-CERLALC.md  guia_estilo_general_CERLALC.md  lenguaje_claro.md  resumen_guia.md
references/: bib2docs.md
sandbox/escritorIA/: PRD.md
src/: bibtex.py  cli.py  enricher.py  enrichment.py  extraction.py  gdocs.py  models.py  scraper.py
src/scrapeAnyPage.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_bibtex.py  test_cli.py  test_enrichment.py  test_extraction.py  test_gdocs.py  test_models.py
