[project]
name = "CiteCrawl"
version = "0.1.0"
description = "A simple AI pipeline to extract, enrich and process links."
authors = [
    {name = "Gemini", email = "gemini@example.com"},
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "coverage-badge>=1.1.2",
]

[tool.setuptools.packages.find]
where = ["citecrawl"]

[tool.pytest.ini_options]
pythonpath = "citecrawl"

[tool.uv.workspace]
members = ["nlp_analysis"]
