[project]
name = "CiteCrawl"
version = "0.1.0"
description = "A simple AI pipeline to extract, enrich and process links."
authors = [
    {name = "Gemini", email = "gemini@example.com"},
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click==8.3.2",
    "pydantic==2.13.2",
    "rich==15.0.0",
    "python-dotenv==1.2.2",
    "firecrawl-py==4.22.2",
    "google-generativeai==0.8.6",
    "streamlit==1.56.0",
    "pandas==3.0.2",
    "openpyxl==3.1.5",
    "qrcode==8.2",
    "bibtexparser==1.4.4",
]

[tool.setuptools.packages.find]
where = ["citecrawl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.workspace]
members = []
