[project]
name = "CiteCrawl"
version = "0.1.0"
description = "A simple AI pipeline to extract, enrich and process links."
authors = [
    {name = "Gemini", email = "gemini@example.com"},
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.3.0",
    "coverage-badge>=1.1.2",
    "firecrawl-py>=4.6.0",
    "firecrawl>=4.6.0",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[tool.setuptools.packages.find]
where = ["citecrawl"]

[tool.pytest.ini_options]
pythonpath = "citecrawl"

[tool.uv.workspace]
members = ["nlp_analysis"]
